git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@130 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_en.properties
@@ -15,7 +15,7 @@ save = Save the discussion
 logout = Quit
 exportDiscussion = Discussion of
 currentDiscussion = Discussion
-messageTooLong = The message must contain a text of less than
+messageTooLong = The message is limited to
 nbMaxTextArea = 1240
 characters = characters
 #CBO : FIN ADD
