--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_en.properties
@@ -1,5 +1,5 @@
 //erreurs
-ContainsTooLargeText = must not exceed 
+ContainsTooLargeText = is limited to
 Characters = characters
 
 userPanel = Select a user
@@ -35,8 +35,8 @@ Size = Size
 Color = Color
 WYSIWYG = Normal Mode 
 HTML = HTML Mode  
-RemoveHtmlTags = Please remove the following HTML tags from your text and resubmit: 
-RememberHtml = Remember, when using HTML Mode you may need to escape
+RemoveHtmlTags = Please remove the following HTML tags from your text and re-submit: 
+RememberHtml = Remember! You may need to 'escape' when using HTML Mode 
 Brackets = the brackets surrounding tags (< and >) with &lt; and &gt;
 Bold = Bold
 Italic = Italic
@@ -49,11 +49,11 @@ UnorderedList = Bullets
 RemoveIndent = Remove indent
 Indent = Indent
 Hyperlink = Hyperlink
-LienURL = A link to a URL must be specified here 
+LienURL = Please enter the URL link here 
 URL = URL 
-PageTropGrosse = Error, the WYSIWYG field contains too many characters to be saved.
-ErreurScript = Error, your HTML code contains scripts.  Only static pages (without script) are authorized.  
-Script = does not have to contain scripts.
+PageTropGrosse = Error! the WYSIWYG field contains too many characters to be saved.
+ErreurScript = Error! your HTML code contains scripts.  Only static pages (without script) are authorized.  
+Script = must not contain scripts.
 Black = Black
 Brown = Brown
 DarkGreen = Dark green
