--- a/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_en.properties
@@ -1,6 +1,6 @@
 importExport.document = Document
 importExport.documents = Documents
-importExport.empty = This topic does not contain any publication
+importExport.empty = This topic contains no publications
 importExport.index = Index of
 
 //Kmax :
