--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -51,7 +51,7 @@ JDP.userAdd = Add a user
 JDP.userCreate = Create a user
 JDP.csvImport = Import (CSV file)
 JDP.csvFile = CSV file
-JDP.errorCsvFile = Error, only .csv files can be uploaded
+JDP.errorCsvFile = Error! Only .csv files can be uploaded
 JDP.ligne = - Line
 JDP.colonne = Column
 JDP.valeur = Value
@@ -59,9 +59,9 @@ JDP.obligatoire = This is a required field
 JDP.nbCarMax = The value must not exceed
 JDP.nbCarMin = The value must contain at least
 JDP.caracteres = characters
-JDP.espaces = The value must not contain any space
+JDP.espaces = The value must not contain any spaces
 JDP.existingLogin = This login is already used
-JDP.valeursPossibles = The possible values are : 'Admin', 'AdminPdc', 'AdminDomain', 'User' or 'Guest'
+JDP.valeursPossibles = The possible values are: 'Admin', 'AdminPdc', 'AdminDomain', 'User' or 'Guest'
 JDP.userDel = Delete a user
 JDP.userDelConfirm = Do you really want to delete this user?
 JDP.userImport = Import a user
@@ -80,14 +80,14 @@ JDP.traceLevel = Trace level
 JDP.conseilTXT = To save your file in text format, use the 'Save As' function from the File menu.
 
 JDP.userCryptPasswords = Encrypt user's password
-JDP.LaunchEncrypt = Start the password encryption
+JDP.LaunchEncrypt = Start password encryption
 
 JDP.getX509 = Create a X509 certificate
 
 JDP.roleManager = Managers
-JDP.GroupManagersUpdate = Update managers of the group
-JDP.GroupManagersDelete = Remove all managers of the group
-JDP.GroupManagersDeleteConfirmation = Are you sure you want to remove all managers of the group?
+JDP.GroupManagersUpdate = Update Managers of the group
+JDP.GroupManagersDelete = Remove all Managers of the group
+JDP.GroupManagersDeleteConfirmation = Are you sure you want to remove all Managers of the group?
 
 JDP.usersFound = user(s) found
 JDP.inProgress = Search in progress! Please wait...
