--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_en.properties
@@ -2,7 +2,7 @@ JMP.backSilverpeas = Back to Silverpeas
 
 JMP.exit = Exit
 
-JMP.feedback = Write to the administrator
+JMP.feedback = Write to the Administrator
 
 JMP.help = Help
 
@@ -36,7 +36,7 @@ JWD = Workflows
 JRIFBP = FileBox+ Directory Import
 
 JMAP = Maintenance
-JMAP.header1 =  Maintenance Mode Management
-JMAP.maintenanceOnAir = The site is currently in maintenance mode...
+JMAP.header1 =  Maintenance mode management
+JMAP.maintenanceOnAir = The site is currently in Maintenance mode...
 JMAP.active = Enable
 JMAP.desactive = Disable
