--- a/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
@@ -8,4 +8,4 @@ JOP.spaces = Manageable spaces
 JOP.profiles = Profile membership
 JOP.profile = Profile
 JOP.instance = Instance
-PDCSubscription.show = Show user PDC Subscriptions
+PDCSubscription.show = Show user subscriptions for Classification scheme 
