--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -1,4 +1,4 @@
-JSPP.BackToMainSpacePage = Back to workspace main page
+JSPP.BackToMainSpacePage = Back to Workspace main page
 
 JSPP.homepageType = Type of startup page 
 
@@ -19,11 +19,11 @@ JSPP.SpaceTemplate = Space templates
 JSPP.NoTemplate = Empty space
 JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
 
-JSPP.welcome =  Welcome to the Manage Workspace module 
+JSPP.welcome =  Welcome to the Manage Workspaces module 
 
 JSPP.maintenanceTout = All Silverpeas is in Maintenance mode!
 JSPP.maintenance = Maintenance mode:
-JSPP.maintenanceStatus = This space is actually
+JSPP.maintenanceStatus = This space is currently
 JSPP.maintenanceTxtModeOn = in Maintenance mode...
 JSPP.maintenanceModeOn = Activated
 JSPP.maintenanceModeOff = Deactivated
@@ -51,15 +51,15 @@ JSPP.Choose = Choose...
 JSPP.ModifyStartPage = Modify homepage
 
 //form
-JSPP.creationSpace = Creating a space
-JSPP.creationSubSpace = Creating a sub-space
-JSPP.updateSpace = Updating a space
-JSPP.creationInstance = Adding a service
+JSPP.creationSpace = Create a space
+JSPP.creationSubSpace = Create a sub-space
+JSPP.updateSpace = Update a space
+JSPP.creationInstance = Add a service
 JSPP.roleDescription = Profile description
 
 //erreurs
-MustContainsText = must be filled
-ThisFormContains = Warning, this form contains 
+MustContainsText = must be completed
+ThisFormContains = Warning! this form contains 
 ContainsTooLargeText = must not contain more than 
 NbMaxTextArea = 2000 
 Characters = characters
@@ -68,12 +68,12 @@ JSPP.MustBeginsByHTTP = must contain an URL starting with http:// or https://
 //messages
 JSPP.MessageSuppressionSpaceBegin = Do you really want to delete this space?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Do you really want to delete the users? 
+JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users? 
 JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this service?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 //onglets roles
-JSPP.Manager = Space managers
+JSPP.Manager = Space Managers
 JSPP.admin = Administrators
 JSPP.publisher = Publishers
 JSPP.writer = Writers
@@ -83,12 +83,12 @@ JSPP.reader = Readers
 JSPP.SpaceOrder = Move space 
 JSPP.SpacePlace = Move before the space
 JSPP.PlaceLast = Move to the end
-JSPP.ComponentOrder = service move
+JSPP.ComponentOrder = Move service 
 JSPP.ComponentPlace = Move before the service
 
 // Deplacement de composant
 JSPP.SpaceIn = Move in the space
-JSPP.SpacesNotInMaintenance	= The origin and destination space must be in maintenance mode...
+JSPP.SpacesNotInMaintenance	= The origin and destination space must be in Maintenance mode...
 JSPP.MessageConfirmMovingComponentInSpace = Do you really want to move this component in this space?
 JSPP.ExistingComponentName = Moving not allowed... A component has the same name in the destination space.
 JSPP.movingInProgress = Moving in progress...
@@ -97,11 +97,11 @@ JSPP.movingInProgress = Moving in progress...
 JSPP.BackupUnlimited = Backup/Restore some components
 JSPP.BackupSpace = Backup/Restore some components of the space
 
-JSPP.ErrorComponentCreation = Error during component creation
-JSPP.ErrorComponentUpdate = Error during component update
+JSPP.ErrorComponentCreation = Error during the creation of the component 
+JSPP.ErrorComponentUpdate = Error during the update of the component 
 JSPP.ErrorComponentMessage = Check that another component of the space does not already have the same name!
-JSPP.ErrorSpaceCreation = Error during space creation
-JSPP.ErrorSpaceUpdate = Error during space update
+JSPP.ErrorSpaceCreation = Error during the creation of the space 
+JSPP.ErrorSpaceUpdate = Error during the update of the space 
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 //Corbeille
@@ -112,7 +112,7 @@ JSPP.BinRestoreSelected = Do you really want to restore selected elements?
 JSPP.BinDelete = Remove completely
 JSPP.BinEmpty = The basket is empty!
 JSPP.BinDeleteConfirm =  Do you really want to remove this element and all its content?
-JSPP.BinDeleteConfirmSelected = Do you really want to remove selected elements and all its content?
+JSPP.BinDeleteConfirmSelected = Do you really want to remove the selected elements and all their contents?
 
 JSPP.publicComponent = Public access
 JSPP.hiddenComponent = Hidden
