--- a/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_en.properties
@@ -1,4 +1,4 @@
-myLinks.links = favorits links
+myLinks.links = Favorits links
 myLinks.linksByComponent = Links by composant
 myLinks.createLink = > Create link
 myLinks.updateLink = > Update link
@@ -8,6 +8,6 @@ myLinks.url = Url
 myLinks.popup = Open in a popup
 myLinks.operation = Operations
 myLinks.deleteLinks = Delete selected links
-myLinks.deleteSelection = Do you really want to delete selected links ?
+myLinks.deleteSelection = Do you really want to delete selected links?
 myLinks.messageConfirm = The link has been added to your favorites
 myLinks.retour = Return to component
