--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
@@ -13,19 +13,19 @@ portlets.portlet.nextEvents.help = This portlet displays your future appointment
 portlets.portlet.myNotifications.help = This portlet displays your notifications received.
 portlets.portlet.myBookmarks.help = This portlet displays your favourite links. They can link internally to the portal or to external websites.
 portlets.portlet.favoriteQueries.help = This portlet displays your favourite requests. A simple click on a request will launch the corresponding search.
-portlets.portlet.iFrame.help = This portlet displays any website. Simply type in the website's address.
-portlets.portlet.myCheckOutFiles.help = This portlet displays all the files of the portal currently reserved by you.
-portlets.portlet.myTodos.help = This portlet displays all the tasks yet to be completed by you.
-portlets.portlet.quickInfos.help = This portlet displays all the current news on the portal.
+portlets.portlet.iFrame.help = This portlet displays websites in an IFrame window. Simply type in the website's address.
+portlets.portlet.myCheckOutFiles.help = This portlet displays all your currently reserved files.
+portlets.portlet.myTodos.help = This portlet displays all the tasks yet to be completed.
+portlets.portlet.quickInfos.help = This portlet displays all the current news.
 
-portlets.portlet.componentInstance.help = This portlet displays a portal component. If you do not possess sufficent access rights, an error message will be displayed.
+portlets.portlet.componentInstance.help = This portlet displays a portal component. If you do not have access rights, an error message will be displayed.
 portlets.portlet.componentInstance.error.accessForbidden = Non-authorized access!
 portlets.portlet.componentInstance.pref.instanceId = Component id
 
 portlets.portlet.iFrame.pref.url = URL
 portlets.portlet.iframe.pleaseURL = Please enter a website address!
 
-portlets.portlet.helloSilverpeas.welcome = Welcome to your new home page!<br/>You can modify the contents and page layout as you wish.<br/>Windows can be moved using drag and drop!
+portlets.portlet.helloSilverpeas.welcome = Welcome to your new home page!<br/>You can modify the contents and page layout as you wish.<br/>Windows can be moved using Drag And Drop!
 
 # Admin Page
 portlets.createPortlet=Add a new window
