--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -28,7 +28,7 @@ templateDesigner.searchFilter = Search filter
 templateDesigner.searchAttribute = Attribute name to return
 templateDesigner.searchTypeOnly = Return only the attribute names (true/false)
 templateDesigner.maxResultDisplayed  = Maximum number of search result returned
-templateDesigner.valueFieldType = Restricted field (1) or free enter field (2)
+templateDesigner.valueFieldType = Restricted field (1) or free field (2)
 templateDesigner.driverName = JDBC driver class name
 templateDesigner.url = URL connection
 templateDesigner.login = Login connection to the database
@@ -39,7 +39,7 @@ templateDesigner.query = SQL search request
 templateDesigner.addOption = Add this option
 templateDesigner.updateOption = Modify this option
 templateDesigner.deleteOption = Delete this option
-templateDesigner.defaultOption = Define this option as default value
+templateDesigner.defaultOption = Define this option as the default value
 templateDesigner.optionText = Text
 templateDesigner.optionValue = Key
 
@@ -60,5 +60,5 @@ templateDesigner.newFieldJdbc = Add a 'JDBC connector' field
 
 templateDesigner.displayer = Displayer
 templateDesigner.operations = Operations
-templateDesigner.up = Monter
-templateDesigner.down = Descendre
+templateDesigner.up = Up
+templateDesigner.down = Down
