--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_en.properties
@@ -3,8 +3,8 @@ ko = Kb
 mo = Mb
 util.ligne = - Line
 util.colonne = Column
-util.errorType = Error in type : 
+util.errorType = Error in type: 
 util.valeur = Value
 util.type = Expected type
-util.colonnesAttendues = columns of
+util.colonnesAttendues = Columns of
 util.attendues = expected
