--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
@@ -1,20 +1,20 @@
 lookSilverpeasV5.login	= Login
 lookSilverpeasV5.logout	= Logout
 lookSilverpeasV5.password = Password
-lookSilverpeasV5.pdc	= Classification
+lookSilverpeasV5.pdc	= Classification scheme
 lookSilverpeasV5.domain = Domain
-lookSilverpeasV5.anonymousUnauthorized = You are trying to access a private document.<br>You must be authenticated to access it!<br>Please login...
+lookSilverpeasV5.anonymousUnauthorized = You do not have access rights to this private document.<br>Please login...
 lookSilverpeasV5.AdvancedSearch = Advanced
 lookSilverpeasV5.LastSearchResults = Last results
 lookSilverpeasV5.Help = Help
 lookSilverpeasV5.Map = Site map
 lookSilverpeasV5.PersonalSpace = Personal space
 lookSilverpeasV5.loadingSpaces = Spaces loading...
-lookSilverpeasV5.Feedback = Contact administrators
+lookSilverpeasV5.Feedback = Contact Administrators
 lookSilverpeasV5.Clipboard = Clipboard
 lookSilverpeasV5.glossaire = Glossary
 lookSilverpeasV5.reductExtend = Collapse/Expand
-lookSilverpeasV5.backOffice = Back office
+lookSilverpeasV5.backOffice = Back Office
 lookSilverpeasV5.home = Home
 
 # Connected Users
