--- a/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
@@ -1,23 +1,23 @@
 thesaurus.componentName = Thesaurus
-thesaurus.thesaurus = Vocabularies
+thesaurus.thesaurus = Glossaries
 thesaurus.synonyms = Synonyms
 thesaurus.synonyme = Synonym
 
-thesaurus.OPcreateVoc = Create a vocabulary
-thesaurus.OPeditVoc = Edit the vocabulary heading
-thesaurus.OPdeleteVoc = Delete the vocabulary
+thesaurus.OPcreateVoc = Create glossary
+thesaurus.OPeditVoc = Edit vocabulary heading
+thesaurus.OPdeleteVoc = Delete vocabulary
 thesaurus.OPdeleteVoc2 = Delete
-thesaurus.OPmanageSyn = Edit the synonyms
-thesaurus.OPaffectVoc_to_users = View the users
-thesaurus.OPaffectVoc = Assign a vocabulary
-thesaurus.OPmanageAffectations = Assign a vocabulary with users
-thesaurus.OPeditSyn = Edit the synonyms
+thesaurus.OPmanageSyn = Edit synonyms
+thesaurus.OPaffectVoc_to_users = View users
+thesaurus.OPaffectVoc = Assign vocabulary
+thesaurus.OPmanageAffectations = Assign glossary to users
+thesaurus.OPeditSyn = Edit synonyms
 thesaurus.OPdeleteSyn = Delete the selected synonyms
 thesaurus.OPuserPanel = User Panel
 thesaurus.validateSynonyms = Validate synonyms
 
-thesaurus.vocabulaires = Vocabularies
-thesaurus.vocabulaire = Vocabulary
+thesaurus.vocabulaires = Glossaries
+thesaurus.vocabulaire = Glossary
 thesaurus.axes = Axis
 thesaurus.axe = Axis
 thesaurus.termes = Terms
@@ -37,13 +37,13 @@ thesaurus.BBerrorCreateVoc = Error
 thesaurus.IPGroup = Group
 thesaurus.IPUser = User
 
-thesaurus.vocAffecte = Assigned vocabulary
-thesaurus.dejaAffecte = A vocabulary is already assigned to certain users
-thesaurus.dejaAffecteUtilisateur = A vocabulary is already assigned to one of the users
-thesaurus.onlyssAffcet_toAffect = Assign only to users without vocabulary
+thesaurus.vocAffecte = Assigned glossary
+thesaurus.dejaAffecte = A glossary is already assigned to certain users
+thesaurus.dejaAffecteUtilisateur = A glossary is already assigned to one of the users
+thesaurus.onlyssAffcet_toAffect = Assign only to users without glossary
 thesaurus.tousAffecte = Assign to all
 thesaurus.errorCreateVoc = This name already exists
-thesaurus.oneuser_dejaAffecte = A vocabulary is already assigned
+thesaurus.oneuser_dejaAffecte = A glossary is already assigned
 thesaurus.oneuser_onlyssAffcet_toAffect = Cancel
 thesaurus.oneuser_tousAffecte = Assign
 thesaurus.affecter = Assign
@@ -53,17 +53,17 @@ thesaurus.none = none
 
 //erreurs
 thesaurus.mustContainsText = must be filled in
-thesaurus.thisFormContains = Warning, this form contains
-thesaurus.containsTooLargeText = smust not exceed 
+thesaurus.thisFormContains = Warning! This form contains
+thesaurus.containsTooLargeText = must not exceed 
 thesaurus.nbMaxTextArea = 2000 
 thesaurus.characters = characters
 thesaurus.show = Show
 
 //messages d'avertissement
-thesaurus.MessageSuppressionSelectedVoca = Do you really want to delete the selected vocabulary?
-thesaurus.MessageSuppressionVoca = Do you really want to delete this vocabulary?
+thesaurus.MessageSuppressionSelectedVoca = Do you really want to delete the selected glossary?
+thesaurus.MessageSuppressionVoca = Do you really want to delete this glossary?
 thesaurus.MessageSuppressionsSyno = Do you really want to delete the selected synonyms?
-thesaurus.MessageSelectVoca = Please select a vocabulary
+thesaurus.MessageSelectVoca = Please select a glossary
 thesaurus.MessageSelectTerm = Please select a term
-thesaurus.MessageSelectVocaTerm = Please select a vocabulary and a term
-thesaurus.MessageSelectAxis = Please select axis first
+thesaurus.MessageSelectVocaTerm = Please select a glossary and a term
+thesaurus.MessageSelectAxis = Please select an axis first
