git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@149 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -21,14 +21,14 @@ JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
 
 JSPP.welcome =  Welcome to the Manage Workspaces module 
 
-JSPP.maintenanceTout = All Silverpeas is in Maintenance mode!
+JSPP.maintenanceTout = Silverpeas is in Maintenance mode!
 JSPP.maintenance = Maintenance mode:
 JSPP.maintenanceStatus = This space is currently
 JSPP.maintenanceTxtModeOn = in Maintenance mode...
 JSPP.maintenanceModeOn = Activated
-JSPP.maintenanceModeOff = Deactivated
+JSPP.maintenanceModeOff = De-activated
 JSPP.maintenanceModeToOn = Activate Maintenance mode
-JSPP.maintenanceModeToOff = Deactivate Maintenance mode
+JSPP.maintenanceModeToOff = De-activate Maintenance mode
 
 JSPP.ProfilePanelCreateTitle = Add a role
 JSPP.ProfilePanelModifyTitle = Modify a role
@@ -39,16 +39,16 @@ JSPP.SpaceProfilePanelModifyTitle = Modify users for the profile
 JSPP.SpaceProfilePanelDeleteTitle = Delete users for the profile
 
 JSPP.ComponentPanelCreateTitle = Add a service
-JSPP.ComponentPanelModifyTitle = Modify service
-JSPP.ComponentPanelDeleteTitle = Delete service
+JSPP.ComponentPanelModifyTitle = Modify a service
+JSPP.ComponentPanelDeleteTitle = Delete a service
 
 JSPP.SubSpacePanelCreateTitle = Create a sub-space
 JSPP.SpacePanelCreateTitle = Create a space
-JSPP.SpacePanelModifyTitle = Modify space
-JSPP.SpacePanelDeleteTitle = Delete space
+JSPP.SpacePanelModifyTitle = Modify a space
+JSPP.SpacePanelDeleteTitle = Delete a space
 
 JSPP.Choose = Choose...
-JSPP.ModifyStartPage = Modify homepage
+JSPP.ModifyStartPage = Modify the homepage
 
 //form
 JSPP.creationSpace = Create a space
@@ -105,14 +105,14 @@ JSPP.ErrorSpaceUpdate = Error during the update of the space
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 //Corbeille
-JSPP.Bin = Basket of spaces and components
+JSPP.Bin = Trash of spaces and components
 JSPP.BinRemoveDate = Removing date
 JSPP.BinRestore = Restore
-JSPP.BinRestoreSelected = Do you really want to restore selected elements?
+JSPP.BinRestoreSelected = Do you really want to restore the selected items?
 JSPP.BinDelete = Remove completely
-JSPP.BinEmpty = The basket is empty!
-JSPP.BinDeleteConfirm =  Do you really want to remove this element and all its content?
-JSPP.BinDeleteConfirmSelected = Do you really want to remove the selected elements and all their contents?
+JSPP.BinEmpty = The trash is empty!
+JSPP.BinDeleteConfirm =  Do you really want to remove this items and all its contents?
+JSPP.BinDeleteConfirmSelected = Do you really want to remove the selected items and all their contents?
 
 JSPP.publicComponent = Public access
 JSPP.hiddenComponent = Hidden
@@ -120,16 +120,17 @@ JSPP.inheritanceBlockedComponent = Inheritance of rights
 JSPP.localRights = Local rights
 JSPP.inheritedRights = Inherited rights
 
-JSPP.inheritanceSpaceNotUsed = This subspace does not inherit space's rights.
-JSPP.inheritanceComponentNotUsed = This component does not inherit space's rights.
-JSPP.inheritanceSpaceUsed = This subspace inherits space's rights.
-JSPP.inheritanceComponentUsed = This component inherits space's rights.
+JSPP.inheritanceSpaceNotUsed = This subspace does not inherit the space's rights.
+JSPP.inheritanceComponentNotUsed = This component does not inherit the space's rights.
+JSPP.inheritanceSpaceUsed = This subspace inherits the space's rights.
+JSPP.inheritanceComponentUsed = This component inherits the space's rights.
 JSPP.click = Click
 JSPP.here = here
-JSPP.inheritanceToNotUse = to not use space's rights.
-JSPP.inheritanceToUse = to use space's rights.
+JSPP.inheritanceToNotUse = to not use the space's rights.
+JSPP.inheritanceToUse = to use the space's rights.
 
+JSPP.SpaceAppearance = Skin
 JSPP.SpaceLook = Theme
 JSPP.WallPaper = Header
 
-JSPP.inProgress = Processing in progress !<br/>Please wait...
+JSPP.inProgress = Processing in progress!<br/>Please wait...
