git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@160 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
@@ -2,43 +2,43 @@ silverStatisticsPeas.ip                          = IP address
 silverStatisticsPeas.duration                    = Duration
 silverStatisticsPeas.organisation                = Organization
 silverStatisticsPeas.group                       = Group
-silverStatisticsPeas.conseilTXT 		 = To save your file on text format, use the Save As function of the File menu.
-silverStatisticsPeas.since                       = Since
+silverStatisticsPeas.conseilTXT 		 = To save your file in text format, open File menu > Save As.
+silverStatisticsPeas.since                       = From
 silverStatisticsPeas.to                          = To
 silverStatisticsPeas.filter                      = Filter
-silverStatisticsPeas.connectionNumber            = Connection number
+silverStatisticsPeas.connectionNumber            = Number of connections
 silverStatisticsPeas.export                      = Export
 silverStatisticsPeas.openUserPanelPeas           = Access to user panel
 silverStatisticsPeas.statistics                  = Statistics
-silverStatisticsPeas.RefreshedEveryMinutes       = List refreshed every minutes
+silverStatisticsPeas.RefreshedEveryMinutes       = List refreshed every minute
 silverStatisticsPeas.CloseSession                = Close session
 silverStatisticsPeas.NotifyUser                  = Notify user by popup
 silverStatisticsPeas.Actions                     = Actions
-silverStatisticsPeas.ConfirmKickSession          = Do you confirm the removal of the session of user :
+silverStatisticsPeas.ConfirmKickSession          = Do you confirm the removal of the user session:
 silverStatisticsPeas.durationAvg                 = Average duration
 silverStatisticsPeas.usersWithSession	 	 = Connected users
 silverStatisticsPeas.notifyAllUser		 = Notify all connected users
 silverStatisticsPeas.AuthorMessage		 = Message 
-silverStatisticsPeas.connectionFrequence         = frequency of connections
-silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Connection number of distinct users
-silverStatisticsPeas.LoginNumber 		 = Connection Number
+silverStatisticsPeas.connectionFrequence         = Frequency of connections
+silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Number of distinct users connected 
+silverStatisticsPeas.LoginNumber 		 = Number of connections
 silverStatisticsPeas.AccessNumber	 	 = Access distribution
 silverStatisticsPeas.ToSpace	 	 	 = to space
 silverStatisticsPeas.JobPeas	 	 	 = Services
-silverStatisticsPeas.ServicesNumber	 	 = Type of services distribution
-silverStatisticsPeas.InstancesNumber	 	 = Services number
-silverStatisticsPeas.VolumeNumber	 	 = Publications distribution
-silverStatisticsPeas.VolumeDocsNumber	 	 = Attached files distribution
+silverStatisticsPeas.ServicesNumber	 	 = Type of service distribution
+silverStatisticsPeas.InstancesNumber	 	 = Service number
+silverStatisticsPeas.VolumeNumber	 	 = Publication distribution
+silverStatisticsPeas.VolumeDocsNumber	 	 = Attached file distribution
 silverStatisticsPeas.FromSpace	 	 	 = of the space
-silverStatisticsPeas.AttachmentsNumber	 	 = Attached files number
-silverStatisticsPeas.AttachmentsSize	 	 = Attached files size
-silverStatisticsPeas.VolumeDocsSize	 	 = Attached files size distribution
-silverStatisticsPeas.Frequence	 	 	 = Type of frequence
-silverStatisticsPeas.AttachmentsTotalSize	 = Evolution of attached files size
-silverStatisticsPeas.EvolutionAttachmentsTotalSize = Evolution of attached files size
-silverStatisticsPeas.Historique                  = Evolution history
+silverStatisticsPeas.AttachmentsNumber	 	 = Attached file number
+silverStatisticsPeas.AttachmentsSize	 	 = Attached file size
+silverStatisticsPeas.VolumeDocsSize	 	 = Attached file size distribution
+silverStatisticsPeas.Frequence	 	 	 = Frequency
+silverStatisticsPeas.AttachmentsTotalSize	 = Attached file size
+silverStatisticsPeas.EvolutionAttachmentsTotalSize = Attached file size history
+silverStatisticsPeas.Historique                  = History
 silverStatisticsPeas.Access                  	 = Access
-silverStatisticsPeas.EvolutionAccessDeb 	 = Evolution history of access
+silverStatisticsPeas.EvolutionAccessDeb 	 = Access history 
 silverStatisticsPeas.EvolutionAccessSpace 	 = , space
 silverStatisticsPeas.EvolutionAccessService 	 = , service
 silverStatisticsPeas.EvolutionAccessGroup 	 = for the group
@@ -53,7 +53,7 @@ silverStatisticsPeas.April	 	 	 = Apr.
 silverStatisticsPeas.May	 	 	 = May
 silverStatisticsPeas.June	 	 	 = June
 silverStatisticsPeas.July	 	 	 = July
-silverStatisticsPeas.August	 	 	 = Augu.
+silverStatisticsPeas.August	 	 	 = Aug.
 silverStatisticsPeas.September	 	 	 = Sept.
 silverStatisticsPeas.October	 	 	 = Oct.
 silverStatisticsPeas.November	 	 	 = Nov.
