git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@168 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/silvertrace/messages/agendaMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/agendaMessages_en.properties
@@ -1,38 +1,38 @@
 # MODULE : agenda
 #
-agenda.MSG_ADD_SCHEDULE_FAILED = Impossible d'ajouter la planification d'une tâche
-agenda.MSG_CANT_GET_VIEW_MONTH = Impossible d'obtenir la vue mensuelle de l'agenda
-agenda.MSG_CANT_GET_VIEW_YEAR = Impossible d'obtenir la vue annuelle de l'agenda
-agenda.MSG_CANT_GET_VIEW_DAY = Impossible d'obtenir la vue journalière de l'agenda
-agenda.MSG_CANT_GET_VIEW_WEKK = Impossible d'obtenir la vue hebdomadaire de l'agenda
-agenda.MSG_CANT_DURATION = Impossible de calculer la durée de la tâche
-agenda.MSG_CANT_SEND_MAILS = Impossible de notifier
-agenda.MSG_CANT_CHANGE_DAY = Impossible de changer le jour courant de l'agenda
-agenda.MSG_CANT_GET_PRIORITY = Impossible d'obtenir le niveau de priorité 
+agenda.MSG_ADD_SCHEDULE_FAILED = Impossible to add task planning
+agenda.MSG_CANT_GET_VIEW_MONTH = Impossible to get the monthly view for diary
+agenda.MSG_CANT_GET_VIEW_YEAR = Impossible to get the annual view for diary
+agenda.MSG_CANT_GET_VIEW_DAY = Impossible to get the daily view for diary
+agenda.MSG_CANT_GET_VIEW_WEKK = Impossible to get the weekly view for diary
+agenda.MSG_CANT_DURATION = Impossible to calculate task length
+agenda.MSG_CANT_SEND_MAILS = Impossible to notify
+agenda.MSG_CANT_CHANGE_DAY = Impossible to change the diary's current day
+agenda.MSG_CANT_GET_PRIORITY = Impossible to get the priority level
 agenda.MSG_GET_USER_EVENT_BYDAY_FAILED = Unable to get user's events for the current month 
 
-agenda.EX_CANT_GET_VIEW_DAY = Impossible d'obtenir la vue journalière de l'agenda
-agenda.EX_CANT_ADD_JOURNAL = Impossible d'ajouter un evénement à l'agenda
-agenda.EX_CANT_REMOVE_JOURNAL = Impossible de supprimer l'événement, l'événement à déjà été supprimé ou une erreur interne est survenue
-agenda.EX_CANT_UPDATE_JOURNAL = Impossible de modifier l'événement, l'événement n'est plus disponible ou une erreur interne est survenue
-agenda.EX_CANT_GET_JOURNAL = Impossible d'obtenir l'événement, l'événement n'est plus disponible ou une erreur interne est survenue
+agenda.EX_CANT_GET_VIEW_DAY = Impossible to get the daily view for diary
+agenda.EX_CANT_ADD_JOURNAL = Impossible to add an event to the diary
+agenda.EX_CANT_REMOVE_JOURNAL = Impossible to delete the event. The event has already been deleted or an internal error has occurred
+agenda.EX_CANT_UPDATE_JOURNAL = Impossible to modify the event. The event is longer avalailable or an internal error has occurred
+agenda.EX_CANT_GET_JOURNAL = Impossible to get the event. The event is longer avalailable or an internal error has occurred
 
-agenda.EX_CANT_GET_ATTENDEES = Impossible de connaître les participants à l'événement
-agenda.EX_CANT_SET_ATTENDEES = Impossible d'affecter ces participants à l'événement
-agenda.EX_CANT_SET_STATUS = Impossible d'enreigistrer votre réponse sur la participation de l'événement
-agenda.EX_CANT_GET_CATEGORIES = Impossible de récupérer les catégories de classement disponible
-agenda.EX_CANT_GET_CATEGORY = Impossible de récupérer cette catégorie
-agenda.EX_CANT_GET_JOURNAL_CATEGORY = Impossible d'obtenir la catégorie de l'événement
-agenda.EX_CANT_SET_JOURNAL_CATEGORY = Impossible d'affecter ces categories à cet événement
-agenda.EX_CANT_GET_TENTATIVE_SCHEDULABLES = Impossible de récupérer la liste d'invitations pour cet utilisateur
+agenda.EX_CANT_GET_ATTENDEES = Impossible to know the participants of the event
+agenda.EX_CANT_SET_ATTENDEES = The event is longer available or an internal error has occurred
+agenda.EX_CANT_SET_STATUS = Impossible to record your answer about the participation in the event
+agenda.EX_CANT_GET_CATEGORIES = Impossible to recover available classification categories
+agenda.EX_CANT_GET_CATEGORY = Impossible to recover this category
+agenda.EX_CANT_GET_JOURNAL_CATEGORY = Impossible to get the category of the event
+agenda.EX_CANT_SET_JOURNAL_CATEGORY = Impossible to assign categories to this event
+agenda.EX_CANT_GET_TENTATIVE_SCHEDULABLES = Impossible to recover the list of invitations for this user.
 
-agenda.EXPORT_ICAL_FAILED = Erreur lors de l'export iCal
-agenda.MSG_IS_HOLIDAY_DATE_FAILED = Impossible de savoir si le jour est travaillé
-agenda.MSG_GET_DAYS_OFF_FAILED = Impossible de récupérer les jours non travaillés
+agenda.EXPORT_ICAL_FAILED = Export iCal error
+agenda.MSG_IS_HOLIDAY_DATE_FAILED = Impossible to know if the day is a working day
+agenda.MSG_GET_DAYS_OFF_FAILED = Impossible to recover days not worked
 
-agenda.EX_CANT_PARSE_FEED = Impossible de parser le flux entrant
-agenda.FEED_LOADING_SUCCESSFULLY = Lecture du flux ok
-agenda.FEED_LOADING_FAILED = Problème lors de la lecture du flux
-agenda.CONNECTION_REFUSED = Echec de la connexion. Tentative de reconnexion.
-agenda.CONNECTIONS_REFUSED = Connexion refusée après 5 tentatives... Erreur
-agenda.INVALID_RESPONSE_STATUS = Réponse invalide de la requete HTTP (-1)!
+agenda.EX_CANT_PARSE_FEED = Impossible to parse the incoming rate
+agenda.FEED_LOADING_SUCCESSFULLY = Rate read ok
+agenda.FEED_LOADING_FAILED = Problem during the readiing of the rate
+agenda.CONNECTION_REFUSED = Connection failure. Please try again.
+agenda.CONNECTIONS_REFUSED = Connection refused after 5 attempts... Error
+agenda.INVALID_RESPONSE_STATUS = Invalid Answer for the HTTP request (-1)!
