--- a/config-core/src/main/config/silvertrace/messages/alertUserMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/alertUserMessages_en.properties
@@ -1,7 +1,7 @@
 # MODULE : selection
 #
-# ex : selection.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
-# ex : selection.EXE_CANT_READ_FILE                     = Impossible de lire le fichier
+# ex : selection.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
+# ex : selection.EXE_CANT_READ_FILE                     = Impossible to read the file
 
 
 
