--- a/config-core/src/main/config/silvertrace/messages/alertUserPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/alertUserPeasMessages_en.properties
@@ -1,6 +1,6 @@
 # MODULE : selectionPeas
 #
-# ex : selectionPeas.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
-# ex : selectionPeas.EXE_CANT_READ_FILE                     = Impossible de lire le fichier
+# ex : selectionPeas.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
+# ex : selectionPeas.EXE_CANT_READ_FILE                     = Impossible to read the file
 
 
