--- a/config-core/src/main/config/silvertrace/messages/applicationIndexerMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/applicationIndexerMessages_en.properties
@@ -1,19 +1,19 @@
 # MODULE : applicationIndexer
 #
 
-applicationIndexer.MSG_INDEXING_ALL_SPACES = Début de l'indexation de tous les espaces 
-applicationIndexer.MSG_START_INDEXING_SPACE = Début de l'indexation de l'espace
-applicationIndexer.MSG_END_INDEXING_SPACE = Fin de l'indexation de l'espace
+applicationIndexer.MSG_INDEXING_ALL_SPACES = Starting indexation of all spaces 
+applicationIndexer.MSG_START_INDEXING_SPACE = Start of indexation of the space
+applicationIndexer.MSG_END_INDEXING_SPACE = End of indexation of the space
 
-applicationIndexer.MSG_START_INDEXING_COMPONENT = Début de l'indexation du composant
-applicationIndexer.MSG_END_INDEXING_COMPONENT = Fin de l'indexation du composant
-applicationIndexer.EX_INDEXING_COMPONENT_FAILED = Impossible d'indexer le composant
-applicationIndexer.EX_INDEXER_COMPONENT_NOT_FOUND = Impossible de trouver l'indexeur du composant
+applicationIndexer.MSG_START_INDEXING_COMPONENT = Start of indexation of the component
+applicationIndexer.MSG_END_INDEXING_COMPONENT = End of indexation of the component
+applicationIndexer.EX_INDEXING_COMPONENT_FAILED = Impossible to index the component
+applicationIndexer.EX_INDEXER_COMPONENT_NOT_FOUND = Impossible to find the component indexer
 
-applicationIndexer.MSG_START_INDEXING_PERSONAL_COMPONENT = Début de l'indexation du composant de l'espace personnel
-applicationIndexer.MSG_END_INDEXING_PERSONAL_COMPONENT = Fin de l'indexation du composant de l'espace personnel
-applicationIndexer.EX_INDEXING_PERSONAL_COMPONENT_FAILED = Impossible d'indexer le composant de l'espace personnel
-applicationIndexer.EX_INDEXER_PERSONAL_COMPONENT_NOT_FOUND = Impossible de trouver l'indexeur du composant de l'espace personnel
+applicationIndexer.MSG_START_INDEXING_PERSONAL_COMPONENT = Starting indexation of the personal space component
+applicationIndexer.MSG_END_INDEXING_PERSONAL_COMPONENT = Ending indexation of the personal space component
+applicationIndexer.EX_INDEXING_PERSONAL_COMPONENT_FAILED = Impossible tp index the personal space component
+applicationIndexer.EX_INDEXER_PERSONAL_COMPONENT_NOT_FOUND = Impossible to find the personal space component indexer
 
-applicationIndexer.MSG_COMPONENT_INDEXER_NOT_FOUND = L'indexeur du composant est introuvable !
-applicationIndexer.MSG_INDEXING_COMPONENT_ITEM = Indexation d'un élément d'un composant
+applicationIndexer.MSG_COMPONENT_INDEXER_NOT_FOUND = Cannot he the personal space component indexer
+applicationIndexer.MSG_INDEXING_COMPONENT_ITEM = Indexation of a component's element
